deploy/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cleanclaw
  labels:
    name: cleanclaw
